kubernetes/main/apps/monitoring/victoria-metrics-k8s-stack/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics-grafana
  namespace: kube-monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-gateway
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - "monitoring.nidr0x.win"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: victoriametrics-grafana
          port: 80
